--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 body{
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: cadetblue;
+    color: black;
+    font-size: 16px;
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: center;
+    border: 4px solid #7d7d;
+    margin: 0 auto;
+}
+#container h1{
+    font-size: 25px;
 }
