--- a/style.css
+++ b/style.css
@@ -1,16 +1,44 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 body{
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: black;
     font-size: 16px;
 }
+#cabecera{
+    display: flex;
+    align-items: center;
+    margin: auto;
+    text-align: left;
+    background-color: blueviolet;
+    color: white;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    font-size: 25px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    height: 45px;
+}
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0em;
     text-align: center;
     border: 4px solid #7d7d;
     margin: 0 auto;
 }
 #container h1{
     font-size: 25px;
+}
+#post{
+    padding: 1em;
+
+}
+#cabecera #tagline{
+    font-size: 16px;
+    padding: 1em;
+    padding: 0 0 0 1em;
+    
 }
