--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: cursive, 'Times New Roman', Times, serif;
     color: black;
     font-size: 16px;
 }
