--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
     text-align: center;
-    font-family: cursive, 'Times New Roman', Times, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
     font-size: 16px;
 }
