--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body{
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: black;
+    color: blueviolet;
     font-size: 16px;
 }
 #cabecera{
