--- a/style.css
+++ b/style.css
@@ -17,13 +17,14 @@ body{
     background-color: blueviolet;
     color: white;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
-    font-size: 25px;
+    font-size: 30px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
     height: 45px;
 }
 #container{
-    width: 70%;
+    width: 50%;
+    height: 50%;
     padding: 0em;
     text-align: center;
     border: 4px solid #7d7d;
@@ -33,8 +34,9 @@ body{
     font-size: 25px;
 }
 #post{
+    font-size: 20px;
     padding: 1em;
-
+    text-align: justify;
 }
 #cabecera #tagline{
     font-size: 16px;
